<resources>
    <string name="app_name">김프트래커</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">이름</string>
    <string name="price">가격</string>
    <string name="busdPrice">가격(BUSD)</string>
    <string name="usdtPrice">가격(USDT)</string>
    <string name="changerate">변화율</string>
    <string name="Kpremium">김프</string>
    <string name="Kpremiumfullname">김프</string>

    <string name="ExcRate">현재 환율 : </string>

    <string name="menu_kimp">김프</string>
    <string name="menu_upbit">업비트</string>
    <string name="menu_binance">바이낸스</string>

    <string name="review">리뷰</string>
    <string name="reviewishelpful">리뷰를 작성해주시면 감사합니다.</string>
    <string name="privacypolicy">개인정보처리방침</string>
    <string name="fqa">FQA</string>
    <string name="frequentlyanswer">자주 묻는 질문에 대한 사항입니다.</string>

    <string name="thisis_binance">바이낸스 거래소 코인 가격입니다.</string>
    <string name="priceisbusd">가격은 BUSD 기준입니다.</string>
    <string name="priceisusdt">가격은 USDT 기준입니다.</string>
    <string name="thisis_upbit">업비트 거래소 코인 가격입니다.</string>

    <string name="whatiskpremium">1. 김치 프리미엄이란 무엇인가요?</string>
    <string name="kimchpremiumis">김치 프리미엄이란 한국에서 거래되는 암호화폐의 시세가 해외 거래소 시세와 비교해 얼마나 높은지 나타내는 지표입니다.</string>
    <string name="wherefromupbit">2. 업비트 (국내 거래소) 가격 출처는 어디인가요?</string>
    <string name="upbitisfrom">업비트에서 제공하는 공식 API 를 통해 받아옵니다.</string>
    <string name="wherefrombinance">3. 바이낸스 (해외 거래소) 가격 출처는 어디인가요? </string>
    <string name="binancefrom">바이낸스에서 제공하는 공식 API 를 통해 받아옵니다. 가격은 USDT 기준입니다.</string>

    <string name="wherefromcoin">2. 코인들 가격 출처는 어떻게 되나요? </string>
    <string name="coinfrom">업비트, 바이낸스에서 각각 제공하는 공식 오픈 API 로 부터 가격을 표시합니다.</string>

    <string name="howkimchpremium">3. 김치 프리미엄은 어떻게 계산되나요?</string>
    <string name="bycalculated">바이낸스 거래소 코인 가격(USDT)에 한국 수출입 은행에서 제공하는 환율을 곱하여 업비트에서의 코인 가격과 비교해 계산됩니다.</string>

    <string name="coingraph">위젯 등록하기</string>
    <string name="krw">KRW</string>
    <string name="busd">BUSD</string>
    <string name="usdt">USDT</string>
    <string name="krwupbit">업비트</string>
    <string name="krwbin">바이낸스</string>
    <string name="binance">바이낸스</string>
    <string name="upbit">업비트</string>

    <string name="addstar">즐겨찾기 \n(코인이 상위에 노출됩니다.)</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">위젯 등록</string>
    <string name="app_widget_description">버튼을 누르면 홈 화면에 위 모양의 위젯이 등록됩니다. \n*위젯 추가 방법- 홈 화면의 빈 곳을 꾹 누를 시\n 위젯을 추가할 수 있습니다.</string>

    <string name="widgetisadded">" %1$s " 위젯이 추가 되었습니다.</string>
    <string name="privacyurl">https://docs.google.com/document/d/e/2PACX-1vQnn01kZgK0EWyeRBcyZBBuXXjRq09-SlYhJ35XOPyRljUrGE1qs9ocoS3EV2Mr4FLurzz93sh39nYV/pub</string>
</resources>