<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.InfoFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsingToolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:id="@+id/root_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="0dp"
                android:src="@drawable/back_button_nocircle" />
        </RelativeLayout>
    </com.google.android.material.appbar.CollapsingToolbarLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/root_review"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/collapsingToolbarLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_test"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviewishelpful"
            android:textSize="10sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/root_fqa"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/root_review"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fqa"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequentlyanswer"
            android:textSize="10sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/root_privacy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/root_fqa"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacypolicy"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>