<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border_top"
    android:backgroundTint="@color/white">

    <TextView
        android:id="@+id/tv_tabname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:text="@string/name"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_tabprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_tabname"
        android:layout_marginLeft="90dp"
        android:text="@string/price"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_tabkp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="70dp"
        android:text="@string/Kpremium"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_ticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:text="비트코인"
        android:textSize="13sp"
        android:textColor="?android:textColorPrimary"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tv_tabprice"
        android:text="100,000"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"/>

    <TextView
        android:id="@+id/tv_changerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tv_tabkp"
        android:text=""
        android:textSize="15sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>