<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.dialogfragments.WidgetMakerFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginRight="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/root_toolbar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/back_button_nocircle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/coingraph"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/root_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/root_toolbar"
                app:layout_constraintLeft_toLeftOf="parent">

            <RelativeLayout
                android:id="@+id/root_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:clickable="true">

                <ImageView
                    android:id="@+id/iv_star"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ratingstar_empty" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/root_star"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/addstar"/>
            <RelativeLayout
                android:id="@+id/root_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MySampleApp.AppWidgetContainer"
                android:background="@color/bggrey"
                app:layout_constraintTop_toBottomOf="@id/root_star"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">

                <TextView
                    android:id="@+id/tv_coinname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/appwidget_text"
                    android:fontFamily="@font/aritadotum"
                    android:text="코인"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/root_datas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_coinname"
                    android:layout_centerInParent="true">

                    <RelativeLayout
                        android:id="@+id/root_trade_prices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="18dp">

                        <TextView
                            android:id="@+id/tv_upbit_widget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/appwidget_text"
                            android:text="@string/upbit"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/tv_upbitprice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_upbit_widget"
                            android:layout_marginStart="8dp"
                            android:contentDescription="@string/appwidget_text"
                            android:text="000"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/tv_binance_widget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_upbitprice"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/appwidget_text"
                            android:text="@string/binance"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/tv_binanceprice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_binance_widget"
                            android:layout_marginStart="8dp"
                            android:contentDescription="@string/appwidget_text"
                            android:text="000"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold|italic" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/root_kimp_prices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="18dp"
                        android:layout_toRightOf="@id/root_trade_prices">

                        <TextView
                            android:id="@+id/tv_kimp_widget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/appwidget_text"
                            android:text="@string/menu_kimp"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/tv_kimprate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_kimp_widget"
                            android:layout_marginStart="3dp"
                            android:contentDescription="@string/appwidget_text"
                            android:text="000"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold|italic" />
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/root_widget"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/black"
                android:text="@string/add_widget"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_addwidget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_widget"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="13sp"
                android:layout_marginTop="5dp"
                android:text="@string/app_widget_description"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>
</layout>