<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.librarydevloperjo.cointracker.viewmodels.KPremiumAdapterViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:id="@+id/lt_root"
    android:clickable="true"
    android:background="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/border_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white">

    <TextView
        android:id="@+id/tv_tabname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:text="@string/name"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_tabprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_tabname"
        android:layout_marginLeft="90dp"
        android:text="@string/price"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_tabkp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="70dp"
        android:text="@string/Kpremium"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:imageResource="@{viewModel.starImage}"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_ticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:text="@{viewModel.name}"
        android:textSize="13sp"
        android:textColor="?android:textColorPrimary"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/root_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tv_tabprice"
        android:orientation="vertical">
    <TextView
        android:id="@+id/tv_upbitprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.upbitPriceText}"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"/>

    <TextView
        android:id="@+id/tv_binanceprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.binancePriceText}"
        android:textSize="10sp"
        android:textStyle="bold"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_kp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tv_tabkp"
        android:text="@{viewModel.KPremiumText}"
        android:textColor="@{viewModel.kpTextColor}"
        android:textSize="15sp"
        android:textStyle="bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>